fixes : group alignments default light theme check appareance

--- a/src/extensions/mg-dropdown.scss
+++ b/src/extensions/mg-dropdown.scss
@@ -9,10 +9,12 @@
 }
 
 .mg-dropdown--button {
+  position: relative;
   width: 100%;
-  margin-bottom: 0;
-  padding-right: 2em;
+  margin-bottom: 0; 
+  margin-right: 1.6rem;
   text-overflow: ellipsis;
+  
 }
 
 .mg-dropdown--button:after {
@@ -57,6 +59,8 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   display: none;
+  opacity: 0;
+  visibility: hidden;
   position: absolute;
   background-color: $color-initial;
   top: 100%;
@@ -78,4 +82,6 @@
 }
 .mg-dropdown.opened > .mg-dropdown--content {
   display: block;
+  opacity: 1;
+  visibility: visible;
 }
